<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>ec.veronica</groupId>
    <version>1.0.0-SNAPSHOT</version>
    <artifactId>veronica-soap</artifactId>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>1.8</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
    </properties>

<!--    <distributionManagement>-->
<!--        <repository>-->
<!--            <id>central</id>-->
<!--            <name>8cce1698cf0b-releases</name>-->
<!--            <url>https://jfrog.rolandopalermo.com/artifactory/libs-release-local</url>-->
<!--        </repository>-->
<!--        <snapshotRepository>-->
<!--            <id>snapshots</id>-->
<!--            <name>8cce1698cf0b-snapshots</name>-->
<!--            <url>https://jfrog.rolandopalermo.com/artifactory/libs-snapshot-local</url>-->
<!--        </snapshotRepository>-->
<!--    </distributionManagement>-->

<!--    <scm>-->
<!--        <url>https://github.com/veronica-platform/veronica-soap</url>-->
<!--        <connection>scm:git:https://github.com/veronica-platform/veronica-soap.git</connection>-->
<!--        <developerConnection>scm:git:https://github.com/veronica-platform/veronica-soap.git</developerConnection>-->
<!--    </scm>-->
</project>